<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_name_st"
        android:textColor="#FF5722"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numberOptionTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:text="@string/number_option_st"
        app:layout_constraintTop_toBottomOf="@+id/appNameTv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp" />

    <EditText
        android:id="@+id/numberOptionEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_humber_st"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp"
        app:layout_constraintBaseline_toBottomOf="@id/numberOptionTv" />

    <TextView
        android:id="@+id/votingTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voting_option_st"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/numberOptionTv"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp" />

    <EditText
        android:id="@+id/votingEt"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="#60FFEB3B"
        app:layout_constraintTop_toBottomOf="@+id/votingTv"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/voting_hint_st"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/votedTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/voted_st"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/votingEt"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp" />

    <EditText
        android:id="@+id/votedEt"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:background="#FFEB3B"
        app:layout_constraintTop_toBottomOf="@+id/votingEt"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toEndOf="@id/votedTv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/voted_default_st"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/startBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button_st"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/votedTv"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp" />

    <Button
        android:id="@+id/addBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button_st"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/votedTv"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="15dp" />

    <View
        android:id="@+id/lineVw"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/startBt"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/showResultTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:text="@string/switch_st"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/lineVw"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintEnd_toStartOf="@+id/resultSw"/>

    <Switch
        android:id="@+id/resultSw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/showResultTv"
        app:layout_constraintBaseline_toBaselineOf="@+id/showResultTv"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/resultTv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/showResultTv"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>