<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/preferencesTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/your_preferences"
        android:textColor="#326E4A"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/preferencesLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <LinearLayout
        android:id="@+id/preferencesLayout"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="#DAEDED"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/lineVw"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preferencesTv"
        app:layout_constraintVertical_chainStyle="packed" />

    <View
        android:id="@+id/lineVw"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        android:background="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/bordaVoteTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/preferencesLayout"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/bordaVoteTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="15dp"
        android:text="@string/your_borda_vote"
        android:textColor="#FF9800"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@id/bordaVoteLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/lineVw"
        app:layout_constraintVertical_chainStyle="packed" />

    <LinearLayout
        android:id="@+id/bordaVoteLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:background="#FFC97F"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/buttonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bordaVoteTv"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bordaVoteLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/cancelBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cancel"
            android:backgroundTint="#FF0000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/confirmBt"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/confirmBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="8dp"
            android:text="@string/confirm_your_vote"
            android:backgroundTint="#4CAF50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancelBt" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>